# katanaOPs

./: CMakeLists.txt  CubeMaker.cpp  HelloWorldOp.cpp  README.org  RegisterCubeMakerNode.py  testPlugin.katana
